# tars

./: README.md  VERIFICATION.md  index.html  pyproject.toml
examples/: conversations.jsonl  customer_support_progression.jsonl
examples/latex/: malformed_math.tex  sample_math.tex
examples/research/: math_invalid.tex  math_valid.tex
notebooks/: tars_real_usecase_colab.ipynb  tars_repo_functionality_test.ipynb
src/tars/: __init__.py  cli.py  summarizers.py
src/tars/validators/: __init__.py  base.py  engine.py  result.py
src/tars/validators/research/: __init__.py
src/tars/validators/research/citations/: __init__.py  citation_validator.py  extractor.py  resolver.py
src/tars/validators/research/math/: __init__.py  dimensional_validator.py  lean_exporter.py  math_converter.py  math_extractor.py  math_validator.py  numeric_validator.py  symbolic_validator.py
src/tars_analyzer/: __init__.py  analyzer.py  claim_deduplication.py  cli.py  conversationprogress.py  gemini_client.py  models.py
src/tars_ui/: __init__.py  app.py  arxiv.py
tests/: test_analyzer.py  test_arxiv_utils.py  test_citation_validator.py  test_dimensional_validator.py  test_lean_exporter.py  test_math_converter.py  test_math_extractor.py  test_math_validator.py  test_math_validator_engine.py  test_numeric_validator.py  test_symbolic_validator.py  test_tars_cli.py  test_validator_namespace.py
